--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="./css/testimonials.css" rel="stylesheet" />
     <link href="./css/blog.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -32,7 +33,9 @@
                     <ul>
                         <li><a href="#about">À propos</a></li>
                         <li><a href="#services">Compétences</a></li>
-                        <li><a href="#portfolio">Dernières Réalisations</a></li>
+                        <!-- <li><a href="#portfolio">Dernières Réalisations</a></li>-->
+                        <li><a href="#project-details">Details des Projets</a></li>
+
                     </ul>
                 </div>
             </div>
@@ -68,18 +71,21 @@
                             </p>
                             <p>Mes compétences techniques s'articulent autour de <strong>Python</strong> et
                                 <strong>Java</strong>, avec une bonne maîtrise en C++ et C. J'ai acquis de l'expérience
-                                dans le <em>secteur de l'assurance</em> à travers un stage significatif chez<strong> <span
-                                    style="color: #004BA8;"><em>AXA France</em></span></strong> via<strong>  <span
-                                    style="color: #00458b;"><em>Sollers</em></span> <span
-                                    style="color: #78a742;"><em>Consulting</em></span></strong> , où j'ai développé des
+                                dans le <em>secteur de l'assurance</em> à travers un stage significatif chez<strong>
+                                    <span style="color: #004BA8;"><em>AXA France</em></span></strong> via<strong> <span
+                                        style="color: #00458b;"><em>Sollers</em></span> <span
+                                        style="color: #78a742;"><em>Consulting</em></span></strong> , où j'ai développé
+                                des
                                 solutions innovantes.
                             </p>
                             <br>
                             <p><strong>Certifications:</strong></p>
                             <ul>
-                                <li><a  href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_dev.pdf" target="_blank">Fundamentaux du
+                                <li><a href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_dev.pdf"
+                                        target="_blank">Fundamentaux du
                                         Développeur InsuranceSuite - Examen Elysian</a></li>
-                                <li><a  href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_cc.pdf" target="_blank">Certification
+                                <li><a href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_cc.pdf"
+                                        target="_blank">Certification
                                         Guidewire en configuration de ClaimCenter</a></li>
                             </ul>
                             <br>
@@ -94,6 +100,152 @@
                 </div>
             </div>
     </section>
+
+    <section class="project-details" id="project-details">
+        <div class="container">
+            <div class="title text-center">
+                <h1>Détails des Projets</h1>
+            </div>
+            <div class="projects">
+                <div class="project-card">
+                    <h2>Projet Solaris: AXA France [En cours]</h2>
+                    <p>Développeur java.</p>
+                    <div class="technologies">
+                        <span>Java</span>
+                        <span>Spring</span>
+                        <span>XML</span>
+                        <span>Jenkins</span>
+                        <span>CI/CD</span>
+                        <span>Postman</span>
+                        <span>Guidewire</span>
+                        <span>Jira</span>
+                        <span>Scrum</span>
+                    </div>
+                </div>
+                
+                <!-- Application Web de Planification d'Itinéraire Urbain -->
+                <div class="project-card">
+                    <h2>Planificateur d'Itinéraire Urbain</h2>
+                    <p>Développement d'une application web pour le calcul d'itinéraires en milieu urbain, intégrant
+                        Java, Docker, Gradle, et Spring. Ce projet a implémenté des algorithmes de plus court chemin,
+                        comme Dijkstra et A*, pour optimiser la navigation en ville, en tirant parti de GitLab CI/CD
+                        pour l'intégration et la livraison continues.</p>
+                    <div class="technologies">
+                        <span>Java</span>
+                        <span>Docker</span>
+                        <span>Gradle</span>
+                        <span>Spring</span>
+                        <span>JUnit</span>
+                        <span>CI/CD</span>
+                        <span>Jenkins</span>
+                        <span>Trello</span>
+
+                    </div>
+                </div>
+                <!-- Prédicteur Avancé de Résultats de Football -->
+                <div class="project-card">
+                    <h2>Prédicteur Avancé de Résultats de Football/NBA</h2>
+                    <p>Développement d'un système pointu pour la prédiction des résultats de matchs de football,
+                        utilisant Python, TensorFlow et des techniques d'extraction web. Ce projet a permis d'entraîner
+                        des modèles de machine learning et de deep learning pour anticiper les gagnants avec une
+                        précision remarquable, ouvrant des perspectives pour des applications dans les domaines des
+                        paris sportifs et de l'analyse sportive.</p>
+                    <div class="technologies">
+                        <span>Python</span>
+                        <span>Extraction Web</span>
+                        <span>TensorFlow</span>
+                        <span>Machine Learning</span>
+                        <span>AWS S3</span>
+                        <span>Deep Learning</span>
+                    </div>
+                </div>
+                <!-- Création d'une Application Web d'Extraction de Données -->
+                <div class="project-card">
+                    <h2>Application Web pour l'Extraction de Données de Tables</h2>
+                    <p>Conception d'une application web robuste qui utilise l'IA pour détecter des structures de table
+                        dans des images et des fichiers PDF, avec des technologies telles que Python, Detectron2,
+                        OpenCV, PaddleOCR, et Flask. Ce projet a significativement amélioré l'efficacité du processus
+                        d'extraction de données, transformant les informations structurées des documents en fichiers CSV
+                        exploitables.</p>
+                    <div class="technologies">
+                        <span>Python</span>
+                        <span>Detectron2</span>
+                        <span>OpenCV</span>
+                        <span>PaddleOCR</span>
+                        <span>Flask</span>
+                    </div>
+                </div>
+
+                <!-- Conception et développement d'une application bureautique de jeux -->
+                <div class="project-card">
+                    <h2>Suite de Jeux Ludiques</h2>
+                    <p>Création d'une application de jeux de société numériques, y compris Domino, Trax et Carcassonne,
+                        utilisant C++ et la bibliothèque Sfml. Ce projet a permis d'offrir une expérience de jeu
+                        enrichissante et stimulante, contribuant à la popularisation des jeux classiques sous forme
+                        numérique.</p>
+                    <div class="technologies">
+                        <span>C++</span>
+                        <span>Sfml</span>
+                    </div>
+                </div>
+                <!-- Outil pédagogique innovant pour la gestion de graphes -->
+                <div class="project-card">
+                    <h2>Outil Interactif pour la Gestion de Graphes</h2>
+                    <p>Développement d'un outil pédagogique innovant, conçu avec Python, QML, JavaScript, et Matplotlib,
+                        pour visualiser et comprendre les structures de données et les algorithmes via des animations
+                        interactives. Ce projet facilite l'apprentissage et la compréhension des concepts fondamentaux
+                        en informatique et en algorithmique, rendant l'éducation plus accessible et engageante.</p>
+                    <div class="technologies">
+                        <span>Python</span>
+                        <span>QML</span>
+                        <span>JavaScript</span>
+                        <span>Matplotlib</span>
+                    </div>
+                </div>
+                <!-- D´eveloppement d’un syst`eme de gestion de temp´erature -->
+                <div class="project-card">
+                    <h2>Système de Gestion de Température</h2>
+                    <p>Conception et développement d'un système de simulation pour la gestion du chauffage domestique, intégrant C, Java et Shell pour un contrôle précis et automatisé. Ce projet illustre l'expertise en développement bas niveau et en automatisation de systèmes complexes.</p>
+                    <div class="technologies">
+                        <span>C</span>
+                        <span>Java</span>
+                        <span>Shell</span>
+                    </div>
+                </div>
+
+                <!-- Une application android d’apprentissage linguistique -->
+                <div class="project-card">
+                    <h2>Application Android d'Apprentissage Linguistique</h2>
+                    <p>Création d'une application mobile sous Kotlin, offrant une expérience d'apprentissage linguistique personnalisée. Utilise des concepts avancés de programmation Android pour engager les utilisateurs dans l'apprentissage de nouvelles langues de manière intuitive.</p>
+                    <div class="technologies">
+                        <span>Kotlin</span>
+                        <span>XML</span>
+                    </div>
+                </div>
+
+                <!-- D´eveloppement d’un syst`eme de gestion de crise de la Barbade -->
+                <div class="project-card">
+                    <h2>Système de Gestion de Crise de la Barbade</h2>
+                    <p>Développement d'un système de gestion de crise pour coordination entre services d'urgence, en utilisant Java et JavaScript. Met en avant l'utilisation de Java pour la logique d'application robuste et JavaScript pour des interfaces utilisateur réactives.</p>
+                    <div class="technologies">
+                        <span>Java</span>
+                        <span>JavaScript</span>
+                    </div>
+                </div>
+
+            <!-- Développement d'un desktop game en Java -->
+            <div class="project-card">
+                <h2>Développement du Jeu Desktop Java : "Lampe"</h2>
+                <p>Création d'un jeu de puzzle inspiré du concept "Lampe", entièrement développé en Java. Ce projet met en évidence l'utilisation avancée de la programmation orientée objet, l'élaboration de logiques de jeu complexes, et le développement d'interfaces utilisateur interactives grâce à Swing. L'intégration de tests unitaires réalisés avec JUnit démontre la mise en pratique de méthodes de vérification systématique du code pour assurer le fonctionnement attendu des différentes composantes du jeu.
+                </p>
+                <div class="technologies">
+                    <span>Java</span>
+                    <span>JUnit</span>
+                    <span>Swing</span>
+                </div>
+            </div>
+            </div>
+    </section>
     <section class="services" id="services">
         <div class="container">
             <div class="row">
@@ -105,31 +257,36 @@
                         <div class="box">
                             <div class="icon"><i class="fa fa-laptop"></i></div>
                             <h5>Langages de programmation</h5>
-                            <p>Java, Python, Gosu, C, C++. Développement d'applications performantes, avec un intérêt
+                            <p>Java, Python, Gosu, C, C++. Développement d'applications performantes, avec
+                                un intérêt
                                 pour l'assurance.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fas fa-palette"></i></div>
                             <h5>Machine Learning & IA</h5>
-                            <p>Utilisation de TensorFlow, Keras, scikit-learn. Connaissance des CNNs, RNNs, et modèles
+                            <p>Utilisation de TensorFlow, Keras, scikit-learn. Connaissance des CNNs, RNNs,
+                                et modèles
                                 Transformer.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fas fa-database"></i></div>
                             <h5>Gestion de Bases de Données</h5>
-                            <p>MySQL, Oracle, PostgreSQL. Solutions de données pour applications critiques, pertinentes
+                            <p>MySQL, Oracle, PostgreSQL. Solutions de données pour applications critiques,
+                                pertinentes
                                 en assurance.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fa fa-code"></i></div>
                             <h5>Technologies Web</h5>
-                            <p>HTML5, CSS3, JavaScript. Utilisation de Spring, Flask, FastAPI pour REST APIs et
+                            <p>HTML5, CSS3, JavaScript. Utilisation de Spring, Flask, FastAPI pour REST APIs
+                                et
                                 conception responsive.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fa fa-cloud"></i></div>
                             <h5>DevOps et Méthodologies Agiles</h5>
-                            <p>Pratiques DevOps, AWS, Docker, Git, CI/CD. Agile avec Scrum pour un développement
+                            <p>Pratiques DevOps, AWS, Docker, Git, CI/CD. Agile avec Scrum pour un
+                                développement
                                 logiciel rapide.</p>
                         </div>
                         <div class="box">
@@ -145,6 +302,7 @@
             </div>
         </div>
     </section>
+    <!--
     <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="row">
@@ -160,7 +318,6 @@
                         <li data-target="ML">Machine Learning</li>
                         <li data-target="DE">Data Extraction</li>
                         <li data-target="ui">UI/UX</li>
-                        -->
                     </ul>
                 </div>
             </div>
@@ -253,6 +410,7 @@
         </div>
 
     </section>
+    -->
 
     <footer>
         <div class="container">
@@ -261,6 +419,8 @@
             </div>
         </div>
         </div>
+        </div>
+        </section>
     </footer>
     <section class="copyright">
         <div class="container">
