--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <ul>
                         <li><a href="#about">À propos</a></li>
                         <li><a href="#services">Compétences</a></li>
-                        <!-- <li><a href="#portfolio">Dernières Réalisations</a></li>-->
                         <li><a href="#project-details">Details des Projets</a></li>
+                        <!-- <li><a href="#portfolio">Dernières Réalisations</a></li>-->
 
                     </ul>
                 </div>
@@ -49,11 +49,16 @@
             </div>
             <div class="row">
                 <div class="about-content">
+
                     <div class="row">
                         <div class="img">
                             <img src="img/mee.png" alt='me' />
                         </div>
+                        
                         <div class="text">
+                            <div class="cv-download-button">
+                                <a href="https://ababoq.github.io/My-Portfolio/cv/Curriculum vitae Wassim_BENGUERINE.pdf" target="_blank">Télécharger mon CV</a>
+                            </div>
                             <h4>👋 Bonjour, je suis Wassim Benguerine</h4>
                             <p>
                                 Passionné de <mark>Développement Logiciel</mark> et de <mark>Technologie</mark>, je me
@@ -93,9 +98,6 @@
                                 prêt à relever de nouveaux défis et à contribuer activement au succès d'une équipe
                                 dynamique.</p>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
